fix: docs ip package vulnerability

--- a/docs/latest/package.json
+++ b/docs/latest/package.json
@@ -58,6 +58,7 @@
     "underscore": "1.12.1",
     "json-schema": "0.4.0",
     "minimist": "1.2.8",
-    "lodash.pick": "https://github.com/lodash/lodash/archive/refs/tags/4.17.21.tar.gz"
+    "lodash.pick": "https://github.com/lodash/lodash/archive/refs/tags/4.17.21.tar.gz",
+    "ip": "https://registry.npmjs.org/ip-address/-/ip-address-9.0.5.tgz"
   }
 }
