--- a/package.json
+++ b/package.json
@@ -179,6 +179,7 @@
     "percy/cypress/@percy/agent/express/path-to-regexp": "0.1.10",
     "serve/serve-handler/path-to-regexp": "8.0.0",
     "**/react-router/path-to-regexp": "8.0.0",
-    "semver": "7.5.2"
+    "semver": "7.5.2",
+    "body-parser": "1.20.3"
   }
 }
