--- a/package.json
+++ b/package.json
@@ -181,6 +181,7 @@
     "**/react-router/path-to-regexp": "8.0.0",
     "semver": "7.5.2",
     "body-parser": "1.20.3",
-    "rollup": "3.29.5"
+    "rollup": "3.29.5",
+    "cross-spawn": "7.0.5"
   }
 }
